--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>commons-csv</artifactId>
 			<version>1.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
